--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+.body {
+    display: flex;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.cocktailList {
+    flex-basis: 200px;
+    max-height: 100vh;
+    overflow-y: scroll;
+    border-right: 2px solid grey;
+    margin-right: 10px;
+    padding: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.cocktail-item {
+    padding: 10px;
+    
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.info-panel {
+    width: 50%;
+    padding: 0.5em;
+    text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.info-panel h1{
+    margin: 1.5em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.proportions {
+    padding: 10px 0;
+    margin-bottom: 15px;
+    border-radius: 15px;
+    
 }
+
+.main-content {
+    display: flex;
+    width: 90%;
+    align-items: space-between;
+}
+
+.cocktail-form {
+    width: 45%;
+    padding: 0.5em;
+}
+
